playgrounds/devops/kubernetes/awkwardferny-nginx-ingress/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: meow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meow
  template:
    metadata:
      labels:
        app: meow
    spec:
      containers:
        - name: meow
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: meow2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meow2
  template:
    metadata:
      labels:
        app: meow2
    spec:
      containers:
        - name: meow2
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 8080
