playgrounds/devops/kubernetes/awkwardferny-nginx-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meow-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: meow
---
apiVersion: v1
kind: Service
metadata:
  name: meow-svc2
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: meow2
