playgrounds/devops/kubernetes/awkwardferny-nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meow-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - http:
        paths:
          - path: /meow
            backend:
              serviceName: meow-svc
              servicePort: 80
          - path: /cat
            backend:
              serviceName: meow-svc2
              servicePort: 80
